--- a/SmallProject/NavBar.html
+++ b/SmallProject/NavBar.html
@@ -7,7 +7,9 @@
     <title>Navigation Menu</title>
 </head> 
  <!-- https://cssbuttons.app/buttons/30     This is the cssbutton app  -->
-<style>  
+
+ <!-- This is internal css -->
+<style>    
     body {
     margin: 0;
     padding: 0;
