--- a/SmallProject/Amazon/index.html
+++ b/SmallProject/Amazon/index.html
@@ -26,6 +26,10 @@
         <div class="nav-search border">
             <select class="search-select">
                 <option value="">All</option>
+                <option value="">Mobaile</option>
+                <option value="">Headphone</option>
+                <option value="">Fashion</option>
+                <option value="">Beauty Picks</option>
             </select>
             <input placeholder="Search Amazon" class="search-input">
             <div class="search-icon">
@@ -60,6 +64,7 @@
             <p>Registry</p>
             <p>Gift Cards</p>
             <p>Sell</p>
+            <i class="ri-menu-3-line"></i>
         </div>
         <div class="panel-deals">
             Shops Deals in Electronic
@@ -69,7 +74,8 @@
 
    <div class="hero-section">
      <div class="hero-message">
-        <p>You are on amazon. You on Amazon India for millions of products with fast local Delivery. <a>c;lick here to go amazon.in</a> </p>
+            <p>You are on amazon. You on Amazon India for millions of products with fast local Delivery. 
+            <a>click here to go amazon.in</a> </p>
      </div>
    </div>
 
