--- a/SmallProject/Portfolio/index.html
+++ b/SmallProject/Portfolio/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Protfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
@@ -35,7 +36,7 @@
                      <span id="element"></span>
                        <div class="button">
                               <button class="btn">Download Resume</button>
-                              <button class="btn">Visit Github</button>
+                              <button class="btn"><a href="https://github.com/avinashmuley">Visit Github</a></button>
                        </div>
             </div>
             <div class="rightsection">
@@ -46,8 +47,31 @@
         <section class="secondsection">
             <span class="text-grey">What I have done so far</span>
             <h1>Work Experience </h1>
-
-            <div class="box"></div>
+             <!-- Inside the box  -->
+            <div class="box_2">
+            <ul>
+                <li><h4>Full Stack Developer - Intern</h4></li>
+                <li> <h4>Codekul</h4></li>
+                <li> <p>Codekul is a technology training institute based in Pune, India. 
+                    They offer courses in various programming languages, software testing, web development, mobile app development, 
+                    and other IT-related fields. The institute is known for its practical approach to training, focusing on hands-on learning and real-world projects. 
+                    They cater to both beginners and experienced professionals looking to upgrade their skills in the IT industry. 
+                 <br><br>   <b>(1 Year Experience)</b></p></li>
+                
+            </ul>
+            </div>
+        </section>
+        <hr>
+        <section class="thirdsection">
+            <h1>Skill</h1>
+            <div class="box_3">
+                <h3>HTML5</h3>
+                <h3>CSS</h3>
+                <h3>JavaScript</h3>
+                <h3>React.js</h3>
+                <h3>BootStrap</h3>
+                <h3>MySql</h3>
+            </div>
         </section>
         
     </main> 
@@ -67,10 +91,10 @@
                 </div>
                 <div class="footer-third">
                     <ul>
-                         <li> <i class="fi fi-brands-instagram"> <a href="https://www.linkedin.com/in/avinash-muley-a81270229/">LinkedIn</a></i></li>
-                        <li><img src="" alt="git_logo"> <a href="https://github.com/avinashmuley">GitHub</a></li>
-                        <li><img src="./instagram.png"  alt="insta_logo"><a href="">Instagram</a></li>
-                        <li><a href="">Social Media</a> </li>
+                         <li><a href=""><i class="fa-brands fa-linkedin"></i>  LinkedIn</a></li>
+                        <li><a href=""><i class="fa-brands fa-github"></i>  GitHub</a></li>
+                        <li><a href=""><i class="fa-brands fa-instagram"></i>  Instagram</a></li>
+                        <li><a href=""> <i class="fa-solid fa-hashtag"></i>  Social Media</a> </li>
                      </ul> 
                 </div>
                 <div class="footer-fourth">
