--- a/SmallProject/Portfolio/About.html
+++ b/SmallProject/Portfolio/About.html
@@ -27,6 +27,8 @@
     }
     .section-1 {
       border-radius: 1px solid rgb(10, 4, 4);
+      line-height: 2rem;
+      
     }
     .section-2 {
       height: 200px;
@@ -48,15 +50,7 @@
     </section>
 
     <seciton class="section-2">
-      <img
-        src="./WhatsApp Image 2023-11-19 at 15.27.54_ea377d8f.jpg"
-        class="rounded float-start"
-        alt="..."
-      />
-      <img
-        src="./IMG_20200227_184332.jpg"
-        class="rounded float-end"
-        alt="..."/>
+    
     </seciton>
   </body>
 </html>
