--- a/SmallProject/mamaearth/index.html
+++ b/SmallProject/mamaearth/index.html
@@ -22,9 +22,9 @@
       <div class="mess">
         <p>Asia's 1st Brand with MaDE SAFE Certified Products</p>
         <p>
-          Get Upto 25% off Orders Above Rs.599 | Use Code : SAVE25 | SHOP NOW
+          Get Upto 25% off Orders Above Rs.599 | Use Code : OMG | Click To Shope
         </p>
-        <i class="fa-solid fa-right-to-bracket"></i>
+        <i class="fa-solid fa-user"></i>
       </div>
 
       <nav class="navbar">
@@ -34,7 +34,7 @@
           <div class="search-icon">
             <i class="fa-solid fa-magnifying-glass"></i>
           </div>
-          <input placeholder="search mamaearth" class="search-input" />
+          <input type="search" name="search" placeholder="search mamaearth" class="search-input" />
           <div class="search-button">
             <p><i class="fa-solid fa-magnifying-glass"></i> Search</p>
           </div>
@@ -123,7 +123,7 @@
           Ubtan Face Wash with Turmeric & Saffron for Tan Removal – 100ml
           Removes Tan | Brightens Skin
         </h5>
-        <p>Reduces Up to 100% Dandraff | Soothes itchiness</p>
+        <p>Reduces Up to 100% Dandraff </p>
         <h4>$500</h4>
         <div class="add_cart"><h3>ADD TO CART</h3></div>
       </div>
@@ -133,7 +133,7 @@
           Onion Shampoo with Onion and Plant Keratin for Hair Fall Control-250ml
           Reduces Hair Fall | Strengthens Hair
         </h5>
-        <p>Reduces Up to 100% Dandraff | Soothes itchiness</p>
+        <p>Reduces Up to 100% Dandraff</p>
         <h4>$340</h4>
         <div class="add_cart"><h3>ADD TO CART</h3></div>
       </div>
@@ -162,7 +162,7 @@
           Ubtan Face Wash with Turmeric & Saffron for Tan Removal – 100ml
           Removes Tan | Brightens Skin
         </h5>
-        <p>Reduces Up to 100% Dandraff | Soothes itchiness</p>
+        <p>Reduces Up to 100% Dandraff.</p>
         <h4>$500</h4>
         <div class="add_cart"><h3>ADD TO CART</h3></div>
       </div>
@@ -172,7 +172,7 @@
           Onion Shampoo with Onion and Plant Keratin for Hair Fall Control-250ml
           Reduces Hair Fall | Strengthens Hair
         </h5>
-        <p>Reduces Up to 100% Dandraff | Soothes itchiness</p>
+        <p>Reduces Up to 100% Dandraff.</p>
         <h4>$340</h4>
         <div class="add_cart"><h3>ADD TO CART</h3></div>
       </div>
